# write-you-an-autopilot-sys

./: .gitignore  Dockerfile  README.md  docker-compose.yml
launch/: auto_drive_system.launch.py  network_communication.launch.py  zmq_test_client.py
rviz/: auto_drive.rviz
src/auto_drive_msgs/: CMakeLists.txt  package.xml
src/auto_drive_msgs/msg/: ControlCommand.msg  LocalizationResult.msg  Obstacle.msg  Path.msg  VehicleState.msg
src/auto_drive_network_bridge/: CMakeLists.txt  package.xml
src/auto_drive_network_bridge/include/auto_drive_network_bridge/: network_bridge_node.hpp  secure_communication.hpp
src/auto_drive_network_bridge/src/: mock_server_node.cpp  network_bridge_node.cpp  secure_communication.cpp
src/control/: CMakeLists.txt  package.xml
src/control/src/: vehicle_control_node.cpp
src/localization/: CMakeLists.txt  package.xml
src/localization/src/: gps_imu_fusion_node.cpp
src/network_comm/: CMakeLists.txt  package.xml
src/network_comm/include/network_comm/: boost_asio_adapter.hpp  communication_interface.hpp  zeromq_adapter.hpp
src/network_comm/src/: boost_asio_adapter.cpp  zeromq_adapter.cpp
src/perception/: CMakeLists.txt  package.xml
src/perception/src/: lidar_simulator_node.cpp  obstacle_detection_node.cpp  obstacle_tracking_node.cpp
src/planning/: CMakeLists.txt  package.xml
src/planning/src/: path_planning_node.cpp
src/sensor_simulator/: CMakeLists.txt  package.xml
src/sensor_simulator/src/: gps_simulator_node.cpp  imu_simulator_node.cpp  lidar_simulator_node.cpp  vehicle_simulator_node.cpp
src/visualization/: CMakeLists.txt  package.xml
src/visualization/src/: auto_drive_visualizer_node.cpp
tutorial/English/: 0introduction.md  1. Implementation of distributed system framework and radar simulation node.md  2Perception Level and Visualization Node.md  3Planning and Control (A* and PID).md  4Implementation of network communication interface.md  5Implementation of Network Communication Client.md  6Implementation of network communication server (thread pool).md
tutorial/中文版/: 0引言.md  1分布式系统框架和雷达模拟节点的实现.md  2感知层面和可视化节点.md  2感知层面聚类算法和卡尔曼滤波器的实现.md  3规划和控制（A*和PID）.md  4网络通信接口的实现.md  5网路通信客户端的实现.md  6网络通信服务端的实现（线程池）.md
